--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,8 @@
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>dropwizard-oor</name>
-    <url>https://gitlab.phonepe.com/platform/dropwizard-rmq-healthcheck</url>
+    <name>dropwizard-rmq-healthcheck</name>
+    <url>https://github.com/phaneesh/dropwizard-rmq-healthcheck</url>
 
     <distributionManagement>
         <repository>
